--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://localhost/aturatur",
   "name": "tiketing-admin2",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "ra-input-rich-text": "^3.3.1",
     "react": "^16.13.1",
     "react-admin": "^3.3.2",
     "react-dom": "^16.13.1",
